--- a/README
+++ b/README
@@ -1,9 +1,7 @@
 Racket Language (formerly PLT Scheme) bindings to libtcod
 
-The current bindings are updated to the svn version of libtcod, which means
-they do not work with the 1.5.0 version!
+These work for libtcod 1.5.1, Racket 5.3
 
-In order to run tests, you need to create a symlink to the data dir within the
-libtcod in order to load a font.
+Original bindings by Srihari Ramanathan, maintained by Lewis Potter
 
 libtcod homepage: http://doryen.eptalys.net/libtcod/
